corr-tests: contextualisation traductions communes de "Title"

--- a/templates/manager_assistant_form_view.html
+++ b/templates/manager_assistant_form_view.html
@@ -314,7 +314,7 @@
                 <tr>
                     <th>{% trans 'Academic year' %}</th>
                     <th>{% trans 'Acronym' %}</th>
-                    <th>{% trans 'Title' %}</th>
+                    <th>{% trans 'Title' context 'assistant' %}</th>
                     <th>{% trans 'Duration of a session (h)' %}</th>
                     <th>{% trans 'Number of sessions planned for this course' %}</th>
                     <th>{% trans 'Number of series' %}</th>
