--- a/templates/mandate_learning_unit_list.html
+++ b/templates/mandate_learning_unit_list.html
@@ -60,7 +60,7 @@
                     <tr>
                         <th>{% trans 'Academic year' %}</th>
                         <th>{% trans 'Acronym' %}</th>
-                        <th>{% trans 'Title' %}</th>
+                        <th>{% trans 'Title' context 'assistant' %}</th>
                         <th>{% trans 'Edit' %}</th>
                         <th>{% trans 'Delete' %}</th>
                     </tr>
