--- a/templates/reviewer_structures_list.html
+++ b/templates/reviewer_structures_list.html
@@ -52,7 +52,7 @@
             <table id="myTable" class="table table-hover table-condensed table-bordered" cellspacing="0" width="100%">
             <thead>
             <tr>
-            <th>{% trans 'Title' %}</th>
+            <th>{% trans 'Title' context 'assistant' %}</th>
             <th>{% trans 'Acronym' %}</th>
             <th>{% trans 'Delegation(s)' %}</th>
             </tr>
