corr-tests: contextualisation traductions communes de "Status"

--- a/templates/mandates_list.html
+++ b/templates/mandates_list.html
@@ -53,7 +53,7 @@
                         <th>{% trans 'Assistant' %}</th>
                         <th>{% trans 'Entities' %}</th>
                         <th>{% trans 'Assistant type' %}</th>
-                        <th>{% trans 'Status' %}</th>
+                        <th>{% trans 'Status' context 'assistant' %}</th>
                         <th>{% trans 'Ph.D.' %}</th>
                         <th>{% trans 'Mandate' %}</th>
                         <th>{% trans 'Full-time equivalent' %}</th>
