--- a/templates/mandate_learning_unit_list.html
+++ b/templates/mandate_learning_unit_list.html
@@ -67,24 +67,25 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
                         {% for learning_unit in object_list %}
-                            <td>{{ learning_unit.learning_unit_year.academic_year }}</td>
-                            <td>{{ learning_unit.learning_unit_year.acronym }}</td>
-                            <td>{{ learning_unit.learning_unit_year.complete_title }}</td>
-                            <td><a href="{% url 'tutoring_learning_unit_edit' learning_unit.id %}">
-                                <button type="button" class="btn btn-link btn-lg" title="{% trans 'Edit' %}"
-                                        id="bt_learning_unit_edit">
-                                    <span class="far fa-edit" aria-hidden="true"></span>
-                                </button>
-                                {% trans 'Edit' %}</a></td>
-                            <td><a href="{% url 'tutoring_learning_unit_delete' learning_unit.id %}"
-                                   onclick="return confirm('{% trans 'Are you sure you want to delete this course?' %}')">
-                                <button type="button" class="btn btn-link btn-lg" title="{% trans 'Delete' %}"
-                                        id="bt_learning_unit_delete">
-                                    <i class="fas fa-times" aria-hidden="true"></i>
-                                </button>
-                                {% trans 'Delete' %}</a></td>
+                            <tr>
+                                <td>{{ learning_unit.learning_unit_year.academic_year }}</td>
+                                <td>{{ learning_unit.learning_unit_year.acronym }}</td>
+                                <td>{{ learning_unit.learning_unit_year.complete_title }}</td>
+                                <td><a href="{% url 'tutoring_learning_unit_edit' learning_unit.id %}">
+                                    <button type="button" class="btn btn-link btn-lg" title="{% trans 'Edit' %}"
+                                            id="bt_learning_unit_edit">
+                                        <span class="far fa-edit" aria-hidden="true"></span>
+                                    </button>
+                                    {% trans 'Edit' %}</a></td>
+                                <td><a href="{% url 'tutoring_learning_unit_delete' learning_unit.id %}"
+                                       onclick="return confirm('{% trans 'Are you sure you want to delete this course?' %}')">
+                                    <button type="button" class="btn btn-link btn-lg" title="{% trans 'Delete' %}"
+                                            id="bt_learning_unit_delete">
+                                        <i class="fas fa-times" aria-hidden="true"></i>
+                                    </button>
+                                    {% trans 'Delete' %}</a>
+                                </td>
                             </tr>
                         {% endfor %}
                     </tbody>
@@ -134,12 +135,12 @@
     {% include "new_document.html" %}
 {% endblock %}
 {% block script %}
-<script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.js' %}"></script>
-<script>
+    <script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.js' %}"></script>
+    <script>
         $(document).ready(function () {
             $('#myTable').DataTable({
-                stateSave: true
+                stateSave: true,
             });
         });
     </script>
