OA-47 fix upload pdf file (+ error)

--- a/templates/assistant_form_part3.html
+++ b/templates/assistant_form_part3.html
@@ -113,20 +113,17 @@
   				<h4 class="fs-5 my-2">{% trans 'Report of the steering committee (mandatory from the second renewal application)' %}</h4>
     		</div>
     	</div>
-        {% for file in files %}
-            <div class="row pt-3">
-                <div class="col-lg-2" style="text-align: left">
-                    <a class="btn btn-danger btn-md me-2" id="btn_delete_file"
-                       title="{% trans 'Delete file'%}"
-                       onclick="location.href='{% url 'assistant_file_delete' file.id 'form_part3_edit' %}';">
-                    <i class="fas fa-times" aria-hidden="true" id="spn_delete_file"></i>
-                        {% trans 'Delete' %}</a>
-                </div>
-                <div class="col-lg-10 text-start" id="hdn_filename">
-                   <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">{{ file.document_file }}</a>
-                </div>
+        <div class="list-group">
+            {% for file in files %}
+            <div class="list-group-item d-flex justify-content-between align-items-center">
+                <a id="hdn_filename" href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">{{ file.document_file }}</a>
+                <button class="btn btn-danger" id="btn_delete_file" onclick="location.href='{% url 'assistant_file_delete' file.id 'form_part3_edit' %}';">
+                    <i class="fa fa-times"></i>
+                    {% trans 'Delete' %}
+                </button>
             </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
 		<div class="form-group pt-3">
 			<a class="btn btn-default me-2" data-bs-toggle="modal" data-bs-target="#pnl_upload_documents"
                id="btn_add_file" title="{% trans 'Add file'%}">
@@ -233,6 +230,7 @@ $("#txt_file").on("change", function() {
     fileName = file.name;
     $("#hdn_filename").val(fileName);
     if(fileName.length > 100){
+        document.getElementById('error_modal_upload_alert').classList.remove('d-none');
         document.getElementById("error_modal_upload").innerHTML = "{% trans 'The length of filename may not exceed 100 characters.'%}";
         $("#txt_file").val('')
         $('#pnl_upload_error').remove();
@@ -241,11 +239,13 @@ $("#txt_file").on("change", function() {
         return false;
     }
     else {
+        document.getElementById('error_modal_upload_alert').classList.add('d-none');
         document.getElementById("error_modal_upload").innerHTML = "";
     }
     res = /.*[()%$,;:/=+].*/i.test(fileName);
     if(res)
         {
+        document.getElementById('error_modal_upload_alert').classList.remove('d-none');
         document.getElementById("error_modal_upload").innerHTML = "{% trans 'Filename can not contains : ( ) % $ , ; : / = +'%}";
         $("#txt_file").val('')
         $('#pnl_upload_error').remove();
@@ -254,6 +254,7 @@ $("#txt_file").on("change", function() {
         return false;
     }
     else {
+        document.getElementById('error_modal_upload_alert').classList.add('d-none');
         document.getElementById("error_modal_upload").innerHTML = "";
     }
 });
@@ -303,6 +304,7 @@ $("#bt_upload_document").click(function(event) {
             return true;
         }
         else {
+            document.getElementById('error_modal_upload_alert').classList.remove('d-none');
             document.getElementById("error_modal_upload").innerHTML = "{% trans 'You must select a PDF file'%}";
             $("#txt_file").val('')
             $('#pnl_upload_error').remove();
