--- a/templates/assistant_form_part4.html
+++ b/templates/assistant_form_part4.html
@@ -89,7 +89,7 @@
             {% for file in files %}
             <div class="list-group-item d-flex justify-content-between align-items-center">
                 <a id="hdn_filename" href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">{{ file.document_file }}</a>
-                <button class="btn btn-danger" id="btn_delete_file" onclick="location.href='{% url 'assistant_file_delete' file.id 'form_part4_edit' %}';">
+                <button type="button" class="btn btn-danger" id="btn_delete_file" onclick="location.href='{% url 'assistant_file_delete' file.id 'form_part4_edit' %}';">
                     <i class="fa fa-times"></i>
                     {% trans 'Delete' %}
                 </button>
@@ -116,104 +116,104 @@
 {% endblock %}
 {% block script %}
     <script>
-    //***************************
-    //File upload
-    //***************************
-    $("#txt_file").on("change", function(){
-       var file = this.files[0];
-       fileName = file.name;
-       $("#hdn_filename").val(fileName);
-       if(fileName.length > 100){
-            document.getElementById('error_modal_upload_alert').classList.remove('d-none');
-            document.getElementById("error_modal_upload").innerHTML = "{% trans 'The length of filename may not exceed 100 characters.'%}";
-            $("#txt_file").val('')
-            $('#pnl_upload_error').remove();
-            event.preventDefault();
-            event.stopImmediatePropagation();
-            return false;
-        }
-        else {
-            document.getElementById('error_modal_upload_alert').classList.add('d-none');
-            document.getElementById("error_modal_upload").innerHTML = "";
-        }
-        res = /.*[()%$,;:/=+].*/i.test(fileName);
-        if(res) {
-            document.getElementById('error_modal_upload_alert').classList.remove('d-none');
-            document.getElementById("error_modal_upload").innerHTML = "{% trans 'Filename can not contains : ( ) % $ , ; : / = +'%}";
-            $("#txt_file").val('')
-            $('#pnl_upload_error').remove();
-            event.preventDefault();
-            event.stopImmediatePropagation();
-            return false;
-        }
-        else {
-            document.getElementById('error_modal_upload_alert').classList.add('d-none');
-            document.getElementById("error_modal_upload").innerHTML = "";
-        }
-    });
-    $('[id^="bt_load_doc_"]').click(function(event) {
-        var target = $(event.target);
-        var id = target.attr("id");
-        var pos = id.indexOf('bt_load_doc_');
-        var description = id.substring(pos+12);
-    });
-    $("#bt_upload_document").click(function(event) {
-    var target = $(event.target);
-    var id = target.attr("id");
-    var form = target.form;
-    var description = $("#hdn_description").val();
-    //Clear existing fields
-    $('#hdn_file_' + $("#txt_file").val()).remove();
-    $('#hdn_file_name_' + description).remove();
-    $('#hdn_file_description_' + description).remove();
-    var fileSelect = document.getElementById('txt_file');
-    var files = fileSelect.files;
-    var file = files[0];
-    var data = new FormData();
-    data.append('description', description);
-    data.append('storage_duration', 0);
-    data.append('content_type', file.type);
-    data.append('filename', $("#txt_file").val());
-    data.append('mandate_id', $("#hdn_current_mandate_id").val());
-    var accepted_types = ['application/pdf'];
-    if (file) {
-        if ($.inArray(file.type, accepted_types) >= 0) {
-            data.append('file', file);
-            $.ajax({
-                url: "{% url 'assistant_file_upload' %}",
-                enctype: 'multipart/form-data',
-                type: 'POST',
-                data: data,
-                processData: false,
-                contentType: false,
-                complete: function(xhr, statusText) {
-                    window.location.reload(true);
+        //***************************
+        //File upload
+        //***************************
+        $("#txt_file").on("change", function(){
+           var file = this.files[0];
+           fileName = file.name;
+           $("#hdn_filename").val(fileName);
+           if(fileName.length > 100){
+                document.getElementById('error_modal_upload_alert').classList.remove('d-none');
+                document.getElementById("error_modal_upload").innerHTML = "{% trans 'The length of filename may not exceed 100 characters.'%}";
+                $("#txt_file").val('')
+                $('#pnl_upload_error').remove();
+                event.preventDefault();
+                event.stopImmediatePropagation();
+                return false;
+            }
+            else {
+                document.getElementById('error_modal_upload_alert').classList.add('d-none');
+                document.getElementById("error_modal_upload").innerHTML = "";
+            }
+            res = /.*[()%$,;:/=+].*/i.test(fileName);
+            if(res) {
+                document.getElementById('error_modal_upload_alert').classList.remove('d-none');
+                document.getElementById("error_modal_upload").innerHTML = "{% trans 'Filename can not contains : ( ) % $ , ; : / = +'%}";
+                $("#txt_file").val('')
+                $('#pnl_upload_error').remove();
+                event.preventDefault();
+                event.stopImmediatePropagation();
+                return false;
+            }
+            else {
+                document.getElementById('error_modal_upload_alert').classList.add('d-none');
+                document.getElementById("error_modal_upload").innerHTML = "";
+            }
+        });
+        $('[id^="bt_load_doc_"]').click(function(event) {
+            var target = $(event.target);
+            var id = target.attr("id");
+            var pos = id.indexOf('bt_load_doc_');
+            var description = id.substring(pos+12);
+        });
+        $("#bt_upload_document").click(function(event) {
+            var target = $(event.target);
+            var id = target.attr("id");
+            var form = target.form;
+            var description = $("#hdn_description").val();
+            //Clear existing fields
+            $('#hdn_file_' + $("#txt_file").val()).remove();
+            $('#hdn_file_name_' + description).remove();
+            $('#hdn_file_description_' + description).remove();
+            var fileSelect = document.getElementById('txt_file');
+            var files = fileSelect.files;
+            var file = files[0];
+            var data = new FormData();
+            data.append('description', description);
+            data.append('storage_duration', 0);
+            data.append('content_type', file.type);
+            data.append('filename', $("#txt_file").val());
+            data.append('mandate_id', $("#hdn_current_mandate_id").val());
+            var accepted_types = ['application/pdf'];
+            if (file) {
+                if ($.inArray(file.type, accepted_types) >= 0) {
+                    data.append('file', file);
+                    $.ajax({
+                        url: "{% url 'assistant_file_upload' %}",
+                        enctype: 'multipart/form-data',
+                        type: 'POST',
+                        data: data,
+                        processData: false,
+                        contentType: false,
+                        complete: function(xhr, statusText) {
+                            window.location.reload(true);
+                        }
+                    });
+                    return true;
                 }
-            });
-            return true;
-        }
-        else {
-            document.getElementById('error_modal_upload_alert').classList.remove('d-none');
-            document.getElementById("error_modal_upload").innerHTML = "{% trans 'You must select a PDF file'%}";
-            $("#txt_file").val('')
-            $('#pnl_upload_error').remove();
-            event.preventDefault();
-            event.stopImmediatePropagation();
-            return false;
-        }
-    }
-});
-    $("#pst-form-part4 :input").change(function() {
-        $("#pst-form-part4").data("changed",true);
-    });
-    $('a').on('click', function(e) {
-	    if ($("#pst-form-part4").data("changed")) {
-		    var choice = confirm("{% trans 'Click OK to save the modified data before moving to another section.  Click Cancel to continue without saving.' %}");
-		    if (choice == true) {
-			    e.preventDefault();
-			    $('form#pst-form-part4').submit();
-		   }
-	    }
-    });
+                else {
+                    document.getElementById('error_modal_upload_alert').classList.remove('d-none');
+                    document.getElementById("error_modal_upload").innerHTML = "{% trans 'You must select a PDF file'%}";
+                    $("#txt_file").val('')
+                    $('#pnl_upload_error').remove();
+                    event.preventDefault();
+                    event.stopImmediatePropagation();
+                    return false;
+                }
+            }
+        });
+        $("#pst-form-part4 :input").change(function() {
+            $("#pst-form-part4").data("changed",true);
+        });
+        $('a').on('click', function(e) {
+            if ($("#pst-form-part4").data("changed")) {
+                var choice = confirm("{% trans 'Click OK to save the modified data before moving to another section.  Click Cancel to continue without saving.' %}");
+                if (choice == true) {
+                    e.preventDefault();
+                    $('form#pst-form-part4').submit();
+               }
+            }
+        });
     </script>
 {% endblock %}
