fix-delete : translate message

--- a/templates/assistant_form_part4.html
+++ b/templates/assistant_form_part4.html
@@ -217,7 +217,7 @@
         });
         function no_change(){
             if ($("#pst-form-part4").data("changed")) {
-                alert("{% trans 'You have modified the form, please save your change before to delete attached file.' %}");
+                alert("{% trans 'You have modified the form, please save your change before to delete the attached file.' %}");
                 return false;
             }
             return true;
