OSIS-10673: Major update of datatable + reorganise js script file

--- a/templates/reviewer_structures_list.html
+++ b/templates/reviewer_structures_list.html
@@ -26,7 +26,7 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/dataTables/dataTables.bootstrap3.min.css' %}">
 {% endblock %}
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'reviewer_mandates_list' %}" id="lnk_reviewer_delegation">{% trans 'List of files' %}
