fix datatables columns alignment

--- a/templates/mandate_learning_unit_list.html
+++ b/templates/mandate_learning_unit_list.html
@@ -141,6 +141,7 @@
         $(document).ready(function () {
             $('#myTable').DataTable({
                 stateSave: true,
+                columnDefs: [{"className": "dt-left", "targets": "_all"}],
             });
         });
     </script>
