--- a/templates/mandates_list.html
+++ b/templates/mandates_list.html
@@ -143,7 +143,8 @@
  <script>
  $(document).ready(function() {
     $('#myTable').DataTable( {
-        stateSave: true
+        stateSave: true,
+        columnDefs: [{"className": "dt-left", "targets": "_all"}],
     } );
 } );
 </script>
