--- a/templates/messages.html
+++ b/templates/messages.html
@@ -87,7 +87,8 @@
  <script>
  $(document).ready(function() {
     $('#myTable').DataTable( {
-        stateSave: true
+        stateSave: true,
+        columnDefs: [{"className": "dt-left", "targets": "_all"}],
     } );
 } );
 </script>
