--- a/templates/reviewers_list.html
+++ b/templates/reviewers_list.html
@@ -73,8 +73,9 @@
 <script>
 $(document).ready(function() {
     $('#myTable').DataTable( {
-        stateSave: true
-        } );
-    } );
+        stateSave: true,
+        columnDefs: [{"className": "dt-left", "targets": "_all"}],
+    });
+});
 </script>
 {% endblock %}
